<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/back_continue"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="290dp"
            android:layout_height="38dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/white_button"
            android:text="@string/continue_game"
            android:textSize="17dp" />

        <Button
            android:id="@+id/back_go_to_cat"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="290dp"
            android:layout_height="38dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/white_button"
            android:text="@string/go_to_choose_category"
            android:textSize="17dp" />

        <Button
            android:id="@+id/back_main_menu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="290dp"
            android:layout_height="38dp"
            android:background="@drawable/white_button"
            android:text="@string/go_to_main_menu"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sound_toggle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
        app:layout_constraintRight_toRightOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.604">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/music"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/music_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColorLink="#FF016CB4"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/music_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColorLink="#FF016CB4"
            android:textSize="17dp" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/sound_toggle"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/sound_button"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</android.support.constraint.ConstraintLayout>