<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f51b5"
    tools:context="eu.nikolaykopa.guesspic.activity.GameOverActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gameover_part1" />

    <ImageView
        android:id="@+id/stars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintLeft_toLeftOf="@+id/imageView8"
        app:layout_constraintRight_toRightOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/gameover_part2" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowRadius="1.5"
        android:text="@string/game_over_1"
        android:textColor="@android:color/white"
        android:textSize="55dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stars"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowRadius="1.5"
        android:text="@string/game_over_2"
        android:textColor="@android:color/white"
        android:textSize="55dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/stars"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_gameover_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:actualImageScaleType="focusCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:layout_constraintVertical_bias="0.0">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_box"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/score"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="15dp"
                android:textStyle="italic"
                tools:text="@string/score" />

            <TextView
                android:id="@+id/score_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:text="1000"
                android:textSize="40dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/share"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                tools:text="@string/share" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/vk"
                    android:layout_width="50dp"
                    android:layout_height="51dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/vk_button" />

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/fb_btn" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/go_restart"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/game_over_screen_button"
            android:lineSpacingExtra="15dp"
            android:text="@string/go_screen_restart"
            android:textColor="#ffffff"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share" />

        <Button
            android:id="@+id/go_gotocat"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/game_over_screen_button"
            android:text="@string/go_screen_cat"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/go_restart"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
